discussion/kv_engine/186557/186557_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: USe maxLegacyDCPSeqno in getAllVBSeqs

Use the new getDefaultCollectionMaxLegacyDCPSeqno() in place of the
default collection high-seqno for clients which enable sync-writes
but not collections.

Change-Id: I036954fa33c48a5a64598352c010ba7cbb05585e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-10 17:18:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-10 17:19:01.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/337387/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-10 17:45:48.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1092/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18: error: member access into incomplete type "KVStoreIface" [clang-diagnostic-error]
    auto gv = kvs.get(DiskDocKey{SystemEventFactory::makeCollectionEventKey(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.h:31:7: note: forward declaration of "KVStoreIface"
class KVStoreIface;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1126:29: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    auto legacy = nlohmann::json::parse(value.begin(), value.end());
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1092/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18:
error: member access into incomplete type "KVStoreIface" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1092/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1316/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc(1090): error C2027: use of undefined type "KVStoreIface" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1316/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1059/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18:
error: member access into incomplete type "KVStoreIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1059/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1116/ : FAILURE

Compile error at [2023-02-10T17:24:32.650Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1116/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1117/ : FAILURE

Compile error at [2023-02-10T17:29:50.526Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1117/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1118/ : FAILURE

Compile error at [2023-02-10T17:32:24.980Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18:
error: member access into incomplete type "KVStoreIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1118/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1109/ : FAILURE

Compile error at [2023-02-10T17:36:41.024Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1109/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22624/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1434/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1085/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1109/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
